--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,15 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.back-button {
+  display: flex;
+  width: 100px;
+  height: 35px;
+  border: 1px black solid;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(182, 182, 182);
+  cursor: pointer;
+}
