--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,28 @@ a {
   background-color: rgb(182, 182, 182);
   cursor: pointer;
 }
+
+.user-card {
+  display: flex;
+  margin-bottom: 2%;
+}
+
+.user-image {
+  width: 150px;
+  height: 150px;
+  margin-right: 2%;
+}
+
+.user-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.user-info {
+  width: 300px;
+}
+
+.user-info p {
+  font-weight: bold;
+}
