--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ a {
   color: black;
 }
 
-/*******Горизонтальное меню*******/
+/*******  Горизонтальное меню  *******/
 
 .menu {
   display: flex;
@@ -74,7 +74,7 @@ a {
   cursor: pointer;
 }
 
-/*******Страница "Пользователи" и Страница "Карточка пользователя"*******/
+/*******  Страница "Пользователи" и Страница "Карточка пользователя"  *******/
 
 .user-card {
   display: flex;
@@ -137,7 +137,7 @@ a {
   align-items: center;
 }
 
-/*******Страница "Расчитать ипотеку"*******/
+/*******  Страница "Расчитать ипотеку"  *******/
 
 .form-and-info {
   display: flex;
@@ -220,4 +220,40 @@ a {
 
 .input-buttons-item:last-child {
   margin-right: 0;
+}
+
+.info-value-item {
+  display: flex;
+  margin-bottom: 2%;
+}
+
+.info-value-item .item-name {
+  width: 50%;
+  color: gray;
+  display: flex;
+  align-items: center;
+}
+
+.info-value-item .item-value {
+  width: 50%;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.submit-form {
+  display: flex;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.submit-form .submit-form-button {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(5, 52, 151);
+  border-radius: 5px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
 }
