--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body {
   display: flex;
   width: 150px;
   height: 50px;
-  border: 1px black solid;
+  border: 1px red solid;
   border-radius: 5px;
   justify-content: center;
   align-items: center;
