--- a/src/App.css
+++ b/src/App.css
@@ -304,8 +304,40 @@ body {
 }
 
 /*******  Страница "Таймер"  *******/
+.timer-input {
+  margin-bottom: 2%;
+}
+
+.timer-input input {
+  width: 200px;
+  height: 35px;
+  border-radius: 5px;
+  margin-right: 1%;
+}
+
+.timer-input button {
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  margin-right: 1%;
+}
+
+.timer-value-and-progress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 160px;
+}
+
+.timer-value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  position: absolute;
+}
+
 .progress-ring__circle {
-  background-color: blue;
   transform-origin: center;
   transform: rotate(-90deg);
   transition: stroke-dashoffset 1s;
